// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checked-color prop 1`] = `
<div role="radiogroup" class="ghb-radio-group">
  <div role="radio" tabindex="0" aria-checked="true" class="ghb-radio">
    <div class="ghb-radio__icon ghb-radio__icon--round ghb-radio__icon--checked"><i class="ghb-icon ghb-icon-success" style="border-color: black; background-color: black;">
        <!----></i></div><span class="ghb-radio__label">label</span>
  </div>
  <div role="radio" tabindex="0" aria-checked="true" class="ghb-radio">
    <div class="ghb-radio__icon ghb-radio__icon--round ghb-radio__icon--checked"><i class="ghb-icon ghb-icon-success" style="border-color: white; background-color: white;">
        <!----></i></div><span class="ghb-radio__label">label</span>
  </div>
</div>
`;

exports[`icon-size prop 1`] = `
<div role="radiogroup" class="ghb-radio-group">
  <div role="radio" tabindex="0" aria-checked="true" class="ghb-radio">
    <div class="ghb-radio__icon ghb-radio__icon--round ghb-radio__icon--checked" style="font-size: 10rem;"><i class="ghb-icon ghb-icon-success">
        <!----></i></div><span class="ghb-radio__label">label</span>
  </div>
  <div role="radio" tabindex="0" aria-checked="true" class="ghb-radio">
    <div class="ghb-radio__icon ghb-radio__icon--round ghb-radio__icon--checked" style="font-size: 5rem;"><i class="ghb-icon ghb-icon-success">
        <!----></i></div><span class="ghb-radio__label">label</span>
  </div>
</div>
`;
